2023-10-04T08:14:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6403337212 # 1219
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 162 189 / 172 200
* notice: next accum: outdated-unq outdated-all / unq all: 164 191 / 173 201
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-09-20] / [2023-10-04]

2023-10-03T08:14:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6390390311 # 1216
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 5 11
* notice: prev accum: outdated-unq outdated-all / unq all: 161 188 / 170 198
* notice: next accum: outdated-unq outdated-all / unq all: 162 189 / 172 200
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-09-19] / [2023-10-03]

2023-10-02T00:49:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6374558520 # 1212
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-02
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 161 188 / 169 196
* notice: next accum: outdated-unq outdated-all / unq all: 161 188 / 170 198
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-01]

2023-10-01T08:12:23Z: