@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-04T08:14:16Z",
+  "timestamp" : "2023-10-05T08:14:27Z",
   "count_outdated" : 191,
   "uniques_outdated" : 164,
-  "count" : 201,
-  "uniques" : 173,
+  "count" : 202,
+  "uniques" : 174,
   "clones" : [
     {
       "timestamp": "2023-09-22T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2023-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
