@@ -1,3 +1,12 @@
+2023-10-05T08:14:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6416411984 # 1222
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-05
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 164 191 / 173 201
+* notice: next accum: outdated-unq outdated-all / unq all: 164 191 / 174 202
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-05]
+
 2023-10-04T08:14:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6403337212 # 1219
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
